--- a/app/views/admin/volunteers/show.html.slim
+++ b/app/views/admin/volunteers/show.html.slim
@@ -43,5 +43,4 @@
         dt Other Talents
         dd = decorated_volunteer.other_talents
 
-    = link_to 'Edit', edit_admin_volunteer_path
-
+    = link_to 'Edit', edit_admin_volunteer_path, class: 'btn btn-primary'
