--- a/app/views/admin/volunteers/index.html.slim
+++ b/app/views/admin/volunteers/index.html.slim
@@ -41,4 +41,4 @@
           td = t(:"admin.volunteers.index.value_#{volunteer.email_notification}")
           td = t(:"admin.volunteers.index.value_#{volunteer.adhoc}")
           td = volunteer.deleted_at
-          td = link_to 'Edit', edit_admin_volunteer_path(volunteer), class: 'btn btn-primary'
+          td = link_to 'Edit', edit_admin_volunteer_path(volunteer), class: 'btn btn-default'
