--- a/app/views/admin/centers/index.html.slim
+++ b/app/views/admin/centers/index.html.slim
@@ -1,6 +1,7 @@
 .container
   h1 Centers
-  = link_to 'Add new', new_admin_center_path, class: 'btn btn-primary'
+  - if current_admin.has_role?(:admin)
+    = link_to 'Add new', new_admin_center_path, class: 'btn btn-primary'
 
   table.table.table-hover.table-striped
     thead
@@ -10,4 +11,5 @@
       - @centers.each do |center|
         tr
           td = link_to center.name, admin_center_path(center)
-          td = link_to 'Edit', edit_admin_center_path(center), class: 'btn btn-default'
+          - if current_admin.has_role?(:admin)
+            td = link_to 'Edit', edit_admin_center_path(center), class: 'btn btn-default'
