--- a/app/views/admin/events/index.html.slim
+++ b/app/views/admin/events/index.html.slim
@@ -19,5 +19,7 @@
             td= event.center.name
             td= event.date
             td= decorated_event.time
-            td= 'Draft'
-            td= link_to 'Edit', edit_admin_event_path(event), class: 'btn btn-default'
+            td= event.state
+            td
+              = link_to 'Publish', publish_admin_event_path(event), class: 'btn btn-primary', method: :patch, data: { confirm: 'Are you sure? Events cannot be unpublished once published.' }
+              = link_to 'Edit', edit_admin_event_path(event), class: 'btn btn-default'
