--- a/app/views/admin/events/index.html.slim
+++ b/app/views/admin/events/index.html.slim
@@ -21,5 +21,6 @@
             td= decorated_event.time
             td= event.state
             td
-              = link_to 'Publish', publish_admin_event_path(event), class: 'btn btn-primary', method: :patch, data: { confirm: 'Are you sure? Events cannot be unpublished once published.' }
               = link_to 'Edit', edit_admin_event_path(event), class: 'btn btn-default'
+              = link_to 'Publish', publish_admin_event_path(event), class: 'btn btn-primary', method: :patch, data: { confirm: 'Are you sure? Events cannot be unpublished once published.' }
+              = link_to 'Cancel', cancel_admin_event_path(event), class: 'btn btn-danger', method: :patch, data: { confirm: 'Are you sure? Cancelled events cannot be published again.' }
