--- a/app/views/my/events/new_events.html.slim
+++ b/app/views/my/events/new_events.html.slim
@@ -1,3 +1,22 @@
 = render 'tabs', current_tab: 'New'
 
-h2 New events
+.container
+  .row
+    .col-xs-12 
+      h2 New Events 
+
+      table.table.table-hover
+        thead
+          tr
+            th Event Name
+            th Center
+            th Date
+            th Time
+        tbody
+          - @events.each do |event|
+            - decorate(event) do |decorated_event|
+              tr
+                td= link_to event.event_name, event_path(event)
+                td= event.center.name
+                td= event.date
+                td= decorated_event.time    
