add volunteer registration of events

--- a/app/views/my/events/new_events.html.slim
+++ b/app/views/my/events/new_events.html.slim
@@ -16,7 +16,7 @@
           - @events.each do |event|
             - decorate(event) do |decorated_event|
               tr
-                td= link_to event.event_name, event_path(event)
+                td= link_to event.event_name, my_event_path(event)
                 td= event.center.name
                 td= event.date
                 td= decorated_event.time    
