--- a/app/views/my/events/show.html.slim
+++ b/app/views/my/events/show.html.slim
@@ -18,4 +18,8 @@
       dd = decorated_event.location
       dt Number of Volunteers
       dd = decorated_event.number_of_volunteers
-  = link_to 'View all events', events_path, class: 'btn btn-default'
+  = link_to 'View all events', new_events_my_events_path, class: 'btn btn-default'
+  - if @event.published? && @event.volunteer_events.where(volunteer: current_volunteer).blank?
+    = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
+  - else
+    = link_to 'Registered', '#', class: 'btn btn-primary', disabled: true
