--- a/app/views/my/events/show.html.slim
+++ b/app/views/my/events/show.html.slim
@@ -21,5 +21,7 @@
   = link_to 'View all events', new_events_my_events_path, class: 'btn btn-default'
   - if @event.published? && @event.volunteer_events.where(volunteer: current_volunteer).blank?
     = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
+  - elsif @event.volunteer_events.declined.where(volunteer: current_volunteer).exists?
+    = link_to 'Register', '#', class: 'btn btn-primary', method: :patch
   - else
-    = link_to 'Registered', '#', class: 'btn btn-primary', disabled: true
+    = link_to 'Cancel Registration', unregister_my_event_path(@event), class: 'btn btn-danger', method: :patch
