--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -19,3 +19,5 @@
       dt Number of Volunteers
       dd = decorated_event.number_of_volunteers
   = link_to 'View all events', events_path, class: 'btn btn-default'
+  - if @event.published?
+    = link_to 'Register', new_volunteer_registration_path, class: 'btn btn-primary', method: :get
