--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -6,7 +6,7 @@ html
     meta charset='UTF-8'
     meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'
 
-    title HugProperty | Admin
+    title PPIS | Admin
 
     = stylesheet_link_tag 'https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css', media: 'all'
     = stylesheet_link_tag 'admin', media: 'all'
