--- a/app/views/my/events/show.html.slim
+++ b/app/views/my/events/show.html.slim
@@ -18,10 +18,14 @@
       dd = decorated_event.location
       dt Number of Volunteers
       dd = decorated_event.number_of_volunteers
+
   = link_to 'View all events', new_events_my_events_path, class: 'btn btn-default'
-  - if @event.published? && @event.volunteer_events.where(volunteer: current_volunteer).blank?
-    = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
-  - elsif @event.volunteer_events.declined.where(volunteer: current_volunteer).exists?
+
+  - if @presenter.volunteer_declined?
     = link_to 'Register', '#', class: 'btn btn-primary', method: :patch
-  - else
+
+  - elsif @presenter.volunteer_registered?
     = link_to 'Cancel Registration', unregister_my_event_path(@event), class: 'btn btn-danger', method: :patch
+
+  - else
+    = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
