add link back to dashboard on admin dashboard sidebar

--- a/app/views/layouts/admin_lte_2/_sidebar.html.slim
+++ b/app/views/layouts/admin_lte_2/_sidebar.html.slim
@@ -7,7 +7,7 @@ aside.main-sidebar
         p
         a
           i.fa.fa-circle.text-success
-            online
+            | online
 
     ul.sidebar-menu
       li.header Manage
@@ -16,3 +16,4 @@ aside.main-sidebar
       li = link_to 'Volunteers', admin_volunteers_path
       li = link_to 'Centers', admin_centers_path
 
+      li = link_to 'Back to Dashboard', admin_root_path
