add real data of adhoc/regular volunteers into the dashboard

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -5,7 +5,7 @@
     .row
       .col-xs-4
         .chart
-          canvas#myChart width="400" height="400"
+          canvas#myChart width="400" height="400" data-volunteer-adhoc="#{@volunteers[true]}" data-volunteer-regular="#{@volunteers[false]}"
 
 h2 Events
 
