--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -1,23 +1,18 @@
 .container
-  h2 Details of #{@event.event_name}
-  - decorate(@event) do |decorated_event|
-    dl.event-details
-      dt Center Name
-      dd = decorated_event.center.name
-      dt Event Name
-      dd = decorated_event.event_name
-      dt Description
-      dd = decorated_event.description
-      dt When
-      dd = decorated_event.when
-      dt Time
-      dd = decorated_event.time
-      dt Approx. Duration
-      dd = decorated_event.duration
-      dt Location
-      dd = decorated_event.location
-      dt Number of Volunteers
-      dd = decorated_event.number_of_volunteers
-  = link_to 'View all events', events_path, class: 'btn btn-default'
-  - if @event.published?
-    = link_to 'Register', new_volunteer_registration_path, class: 'btn btn-primary', method: :get
+  .row
+    .col-sm-9
+      .panel.panel-default
+        .panel-body
+          - decorate(@event) do |decorated_event|
+            h5 = decorated_event.when + " @ " + decorated_event.start_time
+            h2 = @event.event_name
+            h4 = @event.location
+            p = @event.description
+            h5 = "Approx. event duration: #{decorated_event.duration}"
+            h5 = "Event by: #{@event.center.name}"
+
+    .col-sm-3
+      .text-center
+        - if @event.published?
+          = link_to 'Volunteer!', new_volunteer_registration_path, class: 'btn btn-primary'
+        = link_to 'Upcoming events', root_path, class: 'btn btn-default'
