--- a/app/views/devise/registrations/_form.html.slim
+++ b/app/views/devise/registrations/_form.html.slim
@@ -1,115 +1,142 @@
-.row
-  .col-xs-12.col-sm-9
-    .form-group
-      = f.label :name
-      = f.text_field :name, autofocus: true, class: "form-control", placeholder: "full name as per NRIC/FIN"
-  .col-xs-12.col-sm-3
-    .form-group
-      = f.label :gender
-      br
-      label.radio-inline
-        input#female name="gender" type="radio" value="true"
-        | Female
-      label.radio-inline
-        input#male name="gender" type="radio" value="false"
-        | Male
-- unless current_volunteer || current_admin
-  .row
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :password
-        - if @minimum_password_length
-          = f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "(minimum #{@minimum_password_length} characters)"
-    .col-xs-12.col-sm-6
-      .form-group
-        = f.label :confirm_password
-        = f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "please re-enter"
-.row
-  .col-xs-12.col-sm-4
-    .form-group
-      = f.label :mobile
-      = f.telephone_field :mobile, class: "form-control", placeholder: "include country code"
-  .col-xs-12.col-sm-5
-    .form-group
-      = f.label :email
-      = f.email_field :email, class: "form-control", placeholder: "a valid email is required for account confirmation."
-.row
-  .col-xs-12.col-sm-4
-    .form-group
-      = f.label :profession
-      = f.text_field :profession, class: "form-control", placeholder: "what do you work as?"
-  .col-xs-12.col-sm-4
-    .form-group
-      = f.label :highest_education
-      = f.collection_select :formal_education_id, FormalEducation.all, :id, :name, { prompt: true }, class: "form-control"
-  .col-xs-12.col-sm-4
-    .form-inline
-      .form-group
-        = f.label :date_of_birth
-        br
-        = f.date_select :date_of_birth, {order: [:day, :month, :year], :start_year => Date.today.year - 80, :end_year => Date.today.year - 5}, class: "form-control"
-.row
-  .col-xs-12
-    .form-group
-      = f.label :'Certification(s)'
-      = f.collection_check_boxes :certification_ids, Certification.all, :id, :name do |b|
-        .checkbox
-          = b.check_box
-          = b.label
+#volunteer-form
+  .panel.panel-primary
+    .panel-heading Account Information
+    .panel-body
+      .row
+        .col-xs-12.col-sm-4
+          .form-group
+            = f.label :email
+            = f.email_field :email, class: "form-control", placeholder: "a valid email is required for account confirmation."
 
-.row
-  .col-xs-12
-    .form-group
-      = f.label :'Preferred Center(s)'
-      = f.collection_check_boxes :center_ids, Center.all, :id, :name do |b|
-        .checkbox
-          = b.check_box
-          = b.label
+      - unless (current_admin && f.object.persisted?)
+        .row
+          .col-xs-12.col-sm-4
+            .form-group
+              = f.label :password
+              = f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "enter password"
+              - if current_volunteer
+                .help-block leave blank if you don't want to change it
+          .col-xs-12.col-sm-4
+            .form-group
+              = f.label :confirm_password
+              = f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "please re-enter password"
 
-.row
-  .col-xs-12
-    .form-group
-      = f.label :'Preferred Target Group(s)'
-      = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name do |b|
-        .checkbox
-          = b.check_box
-          = b.label
+          - if current_volunteer
+            .col-xs-12.col-sm-4
+              .form-group
+                = f.label :current_password
+                = f.password_field :current_password, autocomplete: "off", class: "form-control", placeholder: "please enter current password"
+                .help-block we need your current password to confirm your changes
 
-.row
-  .col-xs-12
-    .form-group
-      = f.label :'Preferred Availability(s)'
-      = f.collection_check_boxes :availability_ids, Availability.all, :id, :name do |b|
-        .checkbox
-          = b.check_box
-          = b.label
+  .panel.panel-primary
+    .panel-heading Personal Information
+    .panel-body
+      .row
+        .col-xs-12.col-sm-4
+          .form-group
+            = f.label :name
+            = f.text_field :name, autofocus: true, class: "form-control", placeholder: "full name as per NRIC/FIN"
+        .col-xs-12.col-sm-2
+          = f.label :gender
+          .form-group
+            label.radio-inline
+              = f.radio_button :gender, :female
+              | Female
+            label.radio-inline
+              = f.radio_button :gender, :male
+              | Male
+        .col-xs-12.col-sm-3
+          = f.label :date_of_birth
+          .form-inline
+            .form-group
+              = f.date_select :date_of_birth, {order: [:day, :month, :year], :start_year => Date.today.year - 80, :end_year => Date.today.year - 5}, class: "form-control"
+        .col-xs-12.col-sm-3
+          .form-group
+            = f.label :mobile
+            = f.telephone_field :mobile, class: "form-control", placeholder: "include country code"
+        .col-xs-12
+          .form-group
+            =f.label :about_me
+            = f.text_area :about_me, class: "form-control", placeholder: "tell us more about yourself! :)"
 
-.row
-  .col-xs-12
-    .form-group
-      = f.label :'Skill(s) you can offer'
-      = f.collection_check_boxes :skill_ids, Skill.all, :id, :name do |b|
-        .checkbox
-          = b.check_box
-          = b.label
+  .panel.panel-info
+    .panel-heading Qualifications
+    .panel-body
+      .row
+        .col-xs-12.col-sm-6
+          .form-group
+            = f.label :profession
+            = f.text_field :profession, class: "form-control", placeholder: "what do you work as?"
+        .col-xs-12.col-sm-6
+          .form-group
+            = f.label :highest_education
+            = f.collection_select :formal_education_id, FormalEducation.all, :id, :name, { prompt: true }, class: "form-control"
+      .checkboxes
+        .row
+          .col-xs-12
+            = f.label :'Certification(s)'
+          = f.collection_check_boxes :certification_ids, Certification.all, :id, :name do |b|
+            .col-xs-12.col-sm-3
+              .checkbox
+                = b.label do
+                  = b.check_box
+                  = b.text
+      .checkboxes
+        .row
+          .col-xs-12
+            = f.label :'Skill(s) you can offer'
+          = f.collection_check_boxes :skill_ids, Skill.all, :id, :name do |b|
+            .col-xs-12.col-sm-3
+              .checkbox
+                = b.label do
+                  = b.check_box
+                  = b.text
+      .row
+        .col-xs-12
+          .form-group
+            =f.label :other_talents
+            = f.text_area :other_talents, class: "form-control", placeholder: "please elaborate on your other talent if you have checked the last box (Other)"
 
-.row
-  .col-xs-12.col-sm-6
-    .form-group
-      =f.label :other_talents
-      = f.text_area :other_talents, class: "form-control", placeholder: "please elaborate on your other talent if you have checked the last box (Other)"
-  .col-xs-12.col-sm-6
-    .form-group
-      =f.label :about_me
-      = f.text_area :about_me, class: "form-control", placeholder: "tell us more about yourself! :)"
-
-.row
-  .col-xs-12.col-sm-12
-    .form-group
-      = f.label 'Would you like to recieve email notifications?'
-      br
-      = f.label 'Yes'
-      = f.radio_button :email_notification, '1'
-
-      = f.label 'No'
-      = f.radio_button :email_notification, '0'
+  .panel.panel-success
+    .panel-heading Preferences
+    .panel-body
+      .checkboxes
+        .row
+          .col-xs-12
+            = f.label :'Preferred Center(s)'
+          = f.collection_check_boxes :center_ids, Center.all, :id, :name do |b|
+            .col-xs-12.col-sm-6
+              .checkbox
+                = b.label do
+                  = b.check_box
+                  = b.text
+      .checkboxes
+        .row
+          .col-xs-12
+            = f.label :'Preferred Target Group(s)'
+          = f.collection_check_boxes :target_group_ids, TargetGroup.all, :id, :name do |b|
+            .col-xs-12.col-sm-3
+              .checkbox
+                = b.label do
+                  = b.check_box
+                  = b.text
+      .checkboxes
+        .row
+          .col-xs-12
+            = f.label :'Preferred Availability(s)'
+          = f.collection_check_boxes :availability_ids, Availability.all, :id, :name do |b|
+            .col-xs-12.col-sm-4
+              .checkbox
+                = b.label do
+                  = b.check_box
+                  = b.text
+      .row
+        .col-xs-12
+          = f.label 'Would you like to recieve email notifications?'
+          .form-group
+            label.radio-inline
+              = f.radio_button :email_notification, true
+              | Yes
+            label.radio-inline
+              = f.radio_button :email_notification, false
+              | No
