add right spacing for the logout button

--- a/app/views/layouts/admin_lte_2/_header.html.slim
+++ b/app/views/layouts/admin_lte_2/_header.html.slim
@@ -13,3 +13,4 @@ header.main-header
     .navbar-custom-menu
       ul.nav.navbar-nav.navbar-right
         li = link_to "Sign out", destroy_admin_session_path, method: :delete, data: { confirm: 'Are you sure?' }
+        li = link_to '', '#'
