--- a/app/views/layouts/admin_lte_2/_sidebar.html.slim
+++ b/app/views/layouts/admin_lte_2/_sidebar.html.slim
@@ -11,7 +11,8 @@ aside.main-sidebar
 
     ul.sidebar-menu
       li.header Manage
-      li = link_to 'Centers', admin_centers_path
+      li = link_to 'Dashboard', admin_root_path
       li = link_to 'Events', admin_events_path
       li = link_to 'Volunteers', admin_volunteers_path
+      li = link_to 'Centers', admin_centers_path
 
