move dashboard logic to a presenter

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -4,11 +4,11 @@
       .box-title Status of Volunteers
       .box-body
         .chart
-          canvas#myChart width="400" height="400" data-volunteer-adhoc="#{@volunteers[true]}" data-volunteer-regular="#{@volunteers[false]}"
+          canvas#myChart width="400" height="400" data-volunteer-adhoc="#{@presenter.volunteers[true]}" data-volunteer-regular="#{@presenter.volunteers[false]}"
 
   .col-xs-12.col-sm-4
       .box-header.with-border
         .box-title Number of Volunteers
         .box.body
           .chart
-            canvas#myChartAllV width="400" height="400" data-volunteers-past3yrs-include-current="#{@volunteers_past3yrs_include_current}" data-volunteers-past3yrs-exclude-current="#{@volunteers_past3yrs_exclude_current}" data-volunteers-past3yrs-oldest-only="#{@volunteers_past3yrs_oldest_only}"
+            canvas#myChartAllV width="400" height="400" data-volunteers-past3yrs-include-current="#{@presenter.volunteers_past3yrs_include_current.count}" data-volunteers-past3yrs-exclude-current="#{@presenter.volunteers_past3yrs_exclude_current.count}" data-volunteers-past3yrs-oldest-only="#{@presenter.volunteers_past3yrs_oldest_only.count}"
