--- a/app/views/my/events/show.html.slim
+++ b/app/views/my/events/show.html.slim
@@ -21,11 +21,11 @@
 
   = link_to 'View all events', new_events_my_events_path, class: 'btn btn-default'
 
-  - if @presenter.volunteer_declined?
-    = link_to 'Register', '#', class: 'btn btn-primary', method: :patch
+  - if @presenter.volunteer_cancelled?
+    = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
 
   - elsif @presenter.volunteer_registered?
     = link_to 'Cancel Registration', unregister_my_event_path(@event), class: 'btn btn-danger', method: :patch
 
-  - else
+  - elsif !@presenter.volunteer_registered_before?
     = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
