add registered and approved events in Upcoming_events and attended events in past_events

--- a/app/views/my/events/new_events.html.slim
+++ b/app/views/my/events/new_events.html.slim
@@ -1,22 +1,2 @@
 = render 'tabs', current_tab: 'New'
-
-.container
-  .row
-    .col-xs-12 
-      h2 New Events 
-
-      table.table.table-hover
-        thead
-          tr
-            th Event Name
-            th Center
-            th Date
-            th Time
-        tbody
-          - @events.each do |event|
-            - decorate(event) do |decorated_event|
-              tr
-                td= link_to event.event_name, my_event_path(event)
-                td= event.center.name
-                td= event.date
-                td= decorated_event.time    
+= render partial: "events", locals: { title: "New Events", events: @events }
