--- a/app/views/my/events/upcoming_events.html.slim
+++ b/app/views/my/events/upcoming_events.html.slim
@@ -1,3 +1,4 @@
 = render 'tabs', current_tab: 'Upcoming'
+= render partial: "events", locals: { title: "Registered Events", events: @registered_events }
+= render partial: "events", locals: { title: "Approved Events", events: @approved_events }
 
-h2 Upcoming Events 
