--- a/app/views/events/show.html.slim
+++ b/app/views/events/show.html.slim
@@ -13,6 +13,17 @@
 
     .col-sm-3
       .text-center
-        - if @event.published?
+        - if current_volunteer.blank? && @event.published?
           = link_to 'Volunteer!', new_volunteer_registration_path, class: 'btn btn-primary'
-        = link_to 'Upcoming events', root_path, class: 'btn btn-default'
+
+        - elsif @presenter.volunteer_cancelled?
+          = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
+
+        - elsif @presenter.volunteer_registered?
+          = link_to 'Cancel Registration', unregister_my_event_path(@event), class: 'btn btn-danger', method: :patch, data: { confirm: 'Are you sure?' }
+
+        - elsif !@presenter.volunteer_registered_before?
+          = link_to 'Register', register_my_event_path(@event), class: 'btn btn-primary', method: :post
+
+        = link_to 'Upcoming events', events_path, class: 'btn btn-default'
+
