Add event chart to admin dashboard

--- a/app/views/admin/dashboard/index.html.slim
+++ b/app/views/admin/dashboard/index.html.slim
@@ -12,3 +12,11 @@
         .box.body
           .chart
             canvas#myChartAllV width="400" height="400" data-volunteers-past3yrs-include-current="#{@presenter.volunteers_past3yrs_include_current.count}" data-volunteers-past3yrs-exclude-current="#{@presenter.volunteers_past3yrs_exclude_current.count}" data-volunteers-past3yrs-oldest-only="#{@presenter.volunteers_past3yrs_oldest_only.count}"
+
+  .col-xs-12.col-sm-4
+        .box-header.with-border
+          .box-title Number of Events
+          .box.body
+            .chart
+              canvas#myChartAllE width="400" height="400" data-events-past3yrs-include-current="#{@presenter.events_past3yrs_include_current.count}" data-events-past3yrs-exclude-current="#{@presenter.events_past3yrs_exclude_current.count}" data-events-past3yrs-oldest-only="#{@presenter.events_past3yrs_oldest_only.count}"
+
