rename column from NRIC_No to nric_no

--- a/app/views/admin/volunteers/show.html.slim
+++ b/app/views/admin/volunteers/show.html.slim
@@ -23,7 +23,7 @@
     - decorate(@volunteer) do |decorated_volunteer|
       dl.volunteer-details
         dt NRIC/FIN No.
-        dd = decorated_volunteer.NRIC_No
+        dd = decorated_volunteer.nric_no
         dt Gender
         dd = decorated_volunteer.gender
         dt Date of Birth
