--- a/app/views/devise/registrations/_form.html.slim
+++ b/app/views/devise/registrations/_form.html.slim
@@ -40,7 +40,7 @@
         .col-xs-12.col-sm-4
           .form-group
             = f.label :NIRC_No, "NRIC or FIN No."
-            = f.text_field :NRIC_No, class: "form-control", placeholder: "full NIRC/FIN Number"
+            = f.text_field :nric_no, class: "form-control", placeholder: "full NIRC/FIN Number"
         .col-xs-12.col-sm-4
           = f.label :gender
           .form-group
