fix some of the workflow of event#show

--- a/app/views/admin/volunteer_events/_find.html.slim
+++ b/app/views/admin/volunteer_events/_find.html.slim
@@ -19,4 +19,4 @@
               td = volunteer.name
               td = volunteer.gender
               td
-                = link_to 'Invite', invite_admin_event_volunteer_event_path, class: 'btn btn-primary', method: :patch
+                = link_to 'Invite', invite_admin_event_volunteer_event_path(@event, volunteer), class: 'btn btn-primary', method: :patch
