add route and tab for approved volunteers

--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -29,7 +29,7 @@
         li#volunteer-tab-pending
           = link_to 'Pending Volunteers', pending_admin_event_volunteer_events_path(@event), remote: true
         li#volunteer-tab-approved
-          = link_to 'Approved Volunteers', admin_volunteer_path
+          = link_to 'Approved Volunteers', approved_admin_event_volunteer_events_path(@event), remote: true
 
       #tab-content
 
