correct code so mailer works

--- a/app/views/new_event_mailer/notify_volunteer.html.slim
+++ b/app/views/new_event_mailer/notify_volunteer.html.slim
@@ -1,8 +1,7 @@
-We have just announced another event and need volunteers like you!
+h2 We have just announced another event and need volunteers like you!
 
 h2 = @event.event_name
 h4 = @event.location
 p = @event.description
 
-To sign up for this event please visit the event page
-  link to "event page" @event
+p  To sign up for this event please visit the event page
