--- a/app/views/my/events/past_events.html.slim
+++ b/app/views/my/events/past_events.html.slim
@@ -1,2 +1,2 @@
 = render 'tabs', current_tab: 'Past'
-= render partial: "events", locals: { title: "Past Events", events: @events }
+= render partial: "events", locals: { title: "Past Events", volunteer_events: @events }
