--- a/app/views/admin/volunteer_events/_volunteers.html.slim
+++ b/app/views/admin/volunteer_events/_volunteers.html.slim
@@ -14,11 +14,14 @@
 
         tbody
           - volunteer_events.each do |volunteer_event|
-            - volunteer = volunteer_event.volunteer
-            tr id="volunteer-#{volunteer_event.id}"
-              td = link_to volunteer.email, admin_volunteer_path(volunteer)
-              td = volunteer.name
-              td = volunteer.gender
-              td
-                = link_to 'Approve', approve_admin_event_volunteer_event_path(volunteer_event.event, volunteer_event), class: 'btn btn-primary', method: :patch, remote: true
-                = link_to 'Decline', decline_admin_event_volunteer_event_path(volunteer_event.event, volunteer_event), class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' }, method: :patch, remote: true
+            - volunteer_event.volunteer.tap do |volunteer|
+              tr id="volunteer-#{volunteer_event.id}"
+                td = link_to volunteer.email, admin_volunteer_path(volunteer)
+                td = volunteer.name
+                td = volunteer.gender
+                td
+                  - if volunteer_event.registered?
+                    = link_to 'Approve', approve_admin_event_volunteer_event_path(volunteer_event.event, volunteer_event), class: 'btn btn-primary', method: :patch, remote: true
+                    = link_to 'Decline', decline_admin_event_volunteer_event_path(volunteer_event.event, volunteer_event), class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' }, method: :patch, remote: true
+                  - elsif volunteer_event.approved?
+                    = link_to 'Attended', '#', class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' }, method: :patch, remote: true
