--- a/app/views/admin/volunteer_events/_volunteers.html.slim
+++ b/app/views/admin/volunteer_events/_volunteers.html.slim
@@ -24,4 +24,5 @@
                     = link_to 'Approve', approve_admin_event_volunteer_event_path(volunteer_event.event, volunteer_event), class: 'btn btn-primary', method: :patch, remote: true
                     = link_to 'Decline', decline_admin_event_volunteer_event_path(volunteer_event.event, volunteer_event), class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' }, method: :patch, remote: true
                   - elsif volunteer_event.approved?
-                    = link_to 'Attended', '#', class: 'btn btn-danger btn-sm', data: { confirm: 'Are you sure?' }, method: :patch, remote: true
+                    = form_for volunteer_event, url: attended_admin_event_volunteer_event_path(volunteer_event.event, volunteer_event), method: :patch, remote: true do |f|
+                      = f.check_box :attend, class: 'btn-attend'
