--- a/app/views/admin/volunteers/index.html.slim
+++ b/app/views/admin/volunteers/index.html.slim
@@ -1,17 +1,19 @@
 .pull-right
   .form-inline
     .form-group
-      h4 Search name/email
+      h4 Search Name/Email
       = form_tag(admin_volunteers_path, :method => "get", id: "search-form") do
         = hidden_field_tag :filter, @query.filter
-        = text_field_tag :search, @query.search, placeholder: "Search Volunteers"
+        = text_field_tag :search, @query.search, placeholder: "Name/Email"
         = submit_tag "Search", :name => nil
     .form-group
-      h4 Search skill
+      h4 Search Skill
       = form_tag(admin_volunteers_path, :method => "get", id: "search-form") do
         = hidden_field_tag :search, @query.search
         = select_tag "filter", options_from_collection_for_select(Skill.all, "id", "name", @query.filter), include_blank: true
         = submit_tag "Search", :name => nil
+    .form-group
+      =link_to 'Clear Search', admin_volunteers_path, class: 'btn btn-default'
 
 .container
   h1 Volunteers
